--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -55,6 +55,10 @@ section {
     font-weight: 300;
   }
 
+  #login-Logo {
+    margin-left: 27%;
+  }
+
   .btn-login {
     font-size: 0.9rem;
     letter-spacing: 0.05rem;
