--- a/client/src/css/about-us.css
+++ b/client/src/css/about-us.css
@@ -33,11 +33,11 @@ section {
     width: 100%;
     height: 100%;
     color: #fff;
-    background: linear-gradient(-45deg,  #FF944D, #EE7752, #E73C7E, #23A6D5, #23D5AB, #00B359);
+    background: linear-gradient(-45deg, #000, #57FF68, #EE7752, #E73C7E, #23A6D5, #1A5FD6, #23D5AB, #FF6A3D, #B057FF);
     background-size: 400%, 400%;
     position: relative;
     animation: animate 10s ease-in-out infinite;
-    padding: 100%;
+    padding: 20%;
   }
 
   @keyframes animate {
