--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -22,5 +22,21 @@
 }
 
 .bargraph, .piechart {
-  margin-left: 500px;
+  margin-top: 5%;
+  margin-left: 580px;
+  margin-bottom: 1%;
+}
+
+label {
+  margin-left: 550px;
+}
+
+.label_X {
+  transform: translate(125px, -25px);
+  margin-bottom: 5%;
+}
+
+.label_Y {
+  transform: translate(-100px, 250px);
+  
 }
