--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -27,16 +27,16 @@
   margin-bottom: 1%;
 }
 
-label {
+.label_Info {
   margin-left: 550px;
 }
 
 .label_X {
-  transform: translate(125px, -25px);
+  transform: translate(675px, -25px);
   margin-bottom: 5%;
 }
 
 .label_Y {
-  transform: translate(-100px, 250px);
+  transform: translate(450px, 250px);
   
 }
