dashboard buttons added, and groups pages modified

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -40,3 +40,11 @@
   transform: translate(450px, 250px);
   
 }
+
+.dashboard_Button {
+  margin-left: 550px;
+}
+
+.dashboard_Input_Feilds {
+  margin-left: 10%;
+}
