--- a/client/src/css/login.css
+++ b/client/src/css/login.css
@@ -6,8 +6,12 @@
   html, body {margin: 0; height: 100%;}
   img {margin-bottom: 50px}
 
-  ::-webkit-scrollbar {
-      display: none;
+  .wrapper {
+    width: 650px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    position: relative;
+    height: 750px;
   }
 
 #login-Logo {
